kubernetes/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx
  namespace: infrapilot

spec:
  replicas: 1

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
      - name: nginx

        image: infrapilot-nginx:latest

        imagePullPolicy: Never

        ports:
        - containerPort: 80
