kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: infrapilot-ingress
  namespace: infrapilot

spec:
  ingressClassName: nginx

  rules:
  - host: infrapilot.local

    http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: nginx-service
            port:
              number: 80
